--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.21.17",
+    "knex-cleaner": "^1.3.1",
     "nodemon": "^2.0.7",
     "sqlite3": "^5.0.1"
   }
